--- a/index.html
+++ b/index.html
@@ -875,6 +875,15 @@
           window.open("https://pwmp.github.io/WEEKTWO/");
         });
       }
+
+      var down-31-projects-31-scrollrinn = document.getElementById(
+        "down-31-projects-31-scrollrinn"
+      );
+      if (down-31-projects-31-scrollrinn) {
+        down-31-projects-31-scrollrinn.addEventListener("click", function () {
+          window.open("Ardunio Assesment/ardunio.html", "_blank");
+        });
+      }
       
       var cardChathura31TeamMembers31Container = document.getElementById(
         "cardChathura31TeamMembers31Container"
