--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
       );
       if (down-31-projects-31-scrollrinn) {
         down-31-projects-31-scrollrinn.addEventListener("click", function () {
-          window.open("Ardunio Assesment/ardunio.html", "_blank");
+          window.open("https://www.instructables.com/search/?q=monitor&projects=all");
         });
       }
       
