--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
                   </div>
                 </div>
               </div>
-              <div class="down-31-projects-31-scrollrinn">
+              <div 
+                class="down-31-projects-31-scrollrinn"
+                id="up31projects31scrollrinner1"
+              >
                 <div class="frame-31-up-31-projects-31-scr">
                   <div class="frame-31-frame-31-down-31-proj">
                     <div class="readmore-31-readmore-31-landin">Read more</div>
@@ -873,6 +876,14 @@
       if (down31Projects31ScrollrInnContainer1) {
         down31Projects31ScrollrInnContainer1.addEventListener("click", function () {
           window.open("https://pwmp.github.io/WEEKTWO/");
+        });
+      }
+      var up31projects31scrollrinner1 = document.getElementById(
+        "up31projects31scrollrinner1"
+      );
+      if (up31projects31scrollrinner1) {
+        up31projects31scrollrinner1.addEventListener("click", function () {
+          window.open("https://stackoverflow.com/questions/47032333/how-to-remove-a-style/");
         });
       }
       
