--- a/index.html
+++ b/index.html
@@ -879,12 +879,12 @@
         });
       }
 
-      var down-31-projects-31-scrollrinn = document.getElementById(
-        "down-31-projects-31-scrollrinn"
+      var up31projects31scrollrinner1 = document.getElementById(
+        "up31projects31scrollrinner1"
       );
-      if (down-31-projects-31-scrollrinn) {
-        down-31-projects-31-scrollrinn.addEventListener("click", function () {
-          window.open("https://www.instructables.com/search/?q=monitor&projects=all");
+      if (up31projects31scrollrinner1) {
+        up31projects31scrollrinner1.addEventListener("click", function () {
+          window.open("https://stackoverflow.com/");
         });
       }
       
