--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
       );
       if (up31projects31scrollrinner1) {
         up31projects31scrollrinner1.addEventListener("click", function () {
-          window.open("https://stackoverflow.com/");
+          window.open("https://chathuradatasci.github.io/ardunio/");
         });
       }
       
